fix: fixed minor scrollbar issue

--- a/src/app/layout/main/main-layout.component.scss
+++ b/src/app/layout/main/main-layout.component.scss
@@ -2,6 +2,7 @@ div.page {
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow-x: hidden;
 
   .wrapper {
     display: flex;
